# gex

./: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  FindROOT.cmake  README.md  cmakeBuild
examples/ej299_compton/: CMakeLists.txt  main.cc
examples/ej299_compton/include/: EJ299Detector.hh  MyUserActionInitialization.hh
examples/ej299_compton/src/: EJ299Detector.cc  MySensitivizer.cc  MyUserActionInitialization.cc
examples/simple/: CMakeLists.txt  main.cc  newclass
examples/simple/include/: MyDetector.hh  MySensitivizer.hh  MyUserActionInitialization.hh
examples/simple/src/: MyDetector.cc  MySensitivizer.cc  MyUserActionInitialization.cc
include/gex/: UserAction.hh  UserActionManager.hh  create.hh
include/gex/data/: DataModule.hh  DataModuleGroup.hh  DetectorData.hh  EnergyData.hh  IData.hh  IDataOutputter.hh  NamedData.hh  NamedDataCollection.hh  PositionData.hh  PrimaryVertexData.hh  RootDictionaryBuilder.hh  TimeData.hh  UserInfoAccess.hh
include/gex/geom/: BoxWorld.hh  Geometry.hh  GeometryManager.hh
include/gex/pga/: AngularDistribution.hh  EnergyDistribution.hh  GenericSource.hh  Isotropic.hh  LinearMotion.hh  MonoEnergyDist.hh  ParticleDistribution.hh  PointSource.hh  PoissonTiming.hh  SingleParticle.hh  SpatialDistribution.hh  SphericalTarget.hh  TimeDistribution.hh
include/gex/sd/: DetectorIdentitySD.hh  DetectorPositionSD.hh  DistanceSD.hh  EnergyDepSD.hh  PrimaryVertexSD.hh  SDGroup.hh  SDModule.hh  Sensitivizer.hh  SimTimeOfHitSD.hh  TimeOfHitSD.hh
include/gex/sim/: Geant4Simulation.hh
include/gex/sim/mock/: DummyDetectorConstruction.hh  DummyPrimaryGenerator.hh  DummyRunAction.hh  DummySensitivizer.hh  DummyUserActionInitialization.hh
include/gex/ua/: Callback.hh  LifetimeExtension.hh  RootTreeManager.hh  RunDataRegistration.hh  UserAction.hh  UserActionManager.hh
include/gex/util/: Access.hh  Chain.hh  MarkovChain.hh  RootLock.hh  STRINGIFY.hh  TSAccumulator.hh  make_unique.hh  str.hh  type_erasure.hh  value_ptr.hh
src/gex/: UserAction.cc  UserActionManager.cc
src/gex/data/: DataModule.cc  DataModuleGroup.cc  DetectorData.cc  EnergyData.cc  IData.cc  IDataOutputter.cc  NamedData.cc  NamedDataCollection.cc  PositionData.cc  PrimaryVertexData.cc  RootDictionaryBuilder.cc  TimeData.cc  UserInfoAccess.cc
src/gex/geom/: BoxWorld.cc  Geometry.cc  GeometryManager.cc
src/gex/pga/: GenericSource.cc  Isotropic.cc  LinearMotion.cc  MonoEnergyDist.cc  PoissonTiming.cc  SingleParticle.cc  SphericalTarget.cc
src/gex/sd/: DetectorIdentitySD.cc  DetectorPositionSD.cc  DistanceSD.cc  EnergyDepSD.cc  PrimaryVertexSD.cc  SDGroup.cc  Sensitivizer.cc  SimTimeOfHitSD.cc  TimeOfHitSD.cc
src/gex/sim/: Geant4Simulation.cc
src/gex/ua/: Callback.cc  LifetimeExtension.cc  RootTreeManager.cc  RunDataRegistration.cc  UserAction.cc  UserActionManager.cc
src/gex/util/: RootLock.cc
